@@ -1,5 +1,6 @@
 package com.ecomerce.projecte.services;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -67,7 +68,7 @@ public class ConnectionServiceImpl implements IConnectionService {
         List<GetConnectionResponse> responses = repository
         .findAll()
         .stream()
-        .map(this::from).toList();
+        .map(this::from).collect(Collectors.toList());
 return BaseResponse.builder()
         .data(responses)
         .message("find all connections")
